src/styles.css
/* You can add global styles to this file, and also import other style files */
body {
    margin: 0;
    height: 100%;
    color: white;
    background-image: url('./assets/img/background.png');
    background-color: black;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

@font-face {
    font-family: 'BlenderProThin';
    src: url('./assets/fonts/BlenderPro-Thin.ttf') format('truetype');
}

main {
    width: 100%;
    font-size: 25px;
    text-align: center;
    text-shadow: 5px 5px 5px #000000;
    font-family: 'BlenderProThin', cursive;
}

main p {
    width: 75%;
    margin-top: 20px;
    margin-bottom: 20px;
    margin-left: auto;
    margin-right: auto;
}

main ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

main ul > li:first-child {
    list-style-type: none;
}

main > h1,
p {
    margin-top: 20px;
    text-shadow: #000000 0.2em 0.2em 0.3em;
}

main h1 {
    margin: 20px;
}

main img {
    opacity: 0.9;
}

main img:hover {
    opacity: 5;
}

main img {
    width: 300px;
    height: 200px;
    padding-top: 10px;
    border-radius: 30px;
    margin-left: auto;
    margin-right: auto;
}

@media (min-width: 800px) {
    main img {
        width: 750px;
        height: 400px;
    }
}

footer {
    width: 100%;
    height: 100px;
    font-size: 20px;
    color: #ffffff;
    text-align: center;
    border-top: 5px solid #ffffff;
    font-family: 'BlenderProThin', sans-serif;
}

footer p {
    display: inline-block;
}

footer a {
    color: #b70000;
}

header {
    width: 100%;
    height: auto;
    display: flex;
    padding: 0;
    margin: 0;
    justify-content: space-between;
    border-bottom: 3px solid #b70000;
    font-family: 'Playfair Display', serif;
}

.headerForMobiles {
    display: flex;
    text-align: center;
    justify-content: center;
    flex-direction: column;
}
.logoForMobiles {
    width: 200px;
    padding: 0;
    margin-left: auto;
    margin-right: auto;
}
.menuForMobile {
    display: flex;
    padding: 0;
    justify-content: space-evenly;
}

header img {
    padding: 20px;
}

.menu {
    display: block;
    padding-top: 20px;
    padding-right: 40px;
}
.menu button {
    width: auto;
    display: block;
    font-size: 15px;
    margin-left: auto;
    margin-right: auto;
}

#logo {
    width: 200px;
    margin: 0;
    padding: 0;
    float: left;
}

